--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -40,12 +40,12 @@ d_model_spec <- readRDS(here("data/03_merged_data/soc-info-models.rds"))
 
 # Introduction
 
-Imagine that you are a novice cook and you have to decide what meal to prepare for a first date. Should you choose an easy favorite or should you attempt to make something new? While the familiar recipe has a high chance of ensuring a good meal, you are less likely to discover a new, delicious dish. The new recipe might taste even better, but it has a higher chance of failure. But perhaps this decision would change if you were cooking for a friend or teacher who could help or give feedback.
+Imagine that you are a novice cook and you have to decide what meal to prepare for a first date. Should you choose an easy favorite or should you attempt to make something new? While the familiar recipe has a high chance of ensuring a good meal, you might miss out on a new, delicious dish. The new recipe might taste even better, but it has a higher chance of failure. But perhaps this decision would change if you were cooking for a friend or teacher who could help or give feedback.
 
 We often have to choose between *exploration* and *exploitation*: that is, actions that could (a) lead to an overt, readily accessible reward based on what we already know (*exploitation*) or (b) result in the discovery of new information (*exploration*; @sutton1998). This decision of whether to explore or exploit is directly related to the relative strength of the goals within a particular context. In the cooking example, I can prioritize the goal of learning by cooking the new recipe, or I can instead emphasize the performance goal by preparing the tried and true meal. 
 Here, we explore the idea of this goal tradeoff in a simple active learning context, where social factors may affect the goals we consider.
 
-```{r image, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=2, fig.height=2, set.cap.width=T, num.cols.cap=1, fig.cap = "An example of the toy used in our paradigm."}
+```{r image, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=2, fig.height=2, set.cap.width=F, num.cols.cap=1, fig.cap = "An example of the toy used in our paradigm."}
 img <- png::readPNG("figs/toywlabel.png")
 grid::grid.raster(img)
 ```
@@ -65,34 +65,35 @@ grid.arrange(img1, img2, ncol = 2)
 
 Real-world learning is characterized by situations where there are teachers, peer learners, or other individuals who can directly influence the utility of information gathering actions. In fact, a large body of evidence suggests that social reasoning processes shapes how we learn from evidence. For example, children learn faster when observing intentional (more informative) actions compared to accidental (less informative) actions. Moreover, adults and children will make even stronger inferences if they believe that another person selected their actions with the goal of helping them learn (i.e., teaching) [@shafto2012learning]. 
 
-Models of active learning are not typically able to accommodate these richer inferences and richer utility structures where people must integrate the value of social goals -- looking competent or knowledgeable, for example -- and information goals when deciding what to do next. Moreover, actions that maximize learning are inherently risky, and thus may be more difficult to undertake in with someone else present. How can active learning models be modified to accommodate this richer set of utilities? As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. We assume that these goals result from features of the social context such as the presence of another individual whom we want to impress. 
+Models of active learning are not typically able to accommodate these richer inferences and richer utility structures where people must integrate the value of social goals -- looking competent or knowledgeable, for example -- and information goals when deciding what to do next. Moreover, actions that maximize learning are inherently risky in that you can potentially fail to produce an apparent outcome, and thus may be more difficult to undertake in with someone else present who might judge you as incompetent. How can active learning models be modified to accommodate this richer set of utilities? As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. We assume that these goals result from features of the social context such as the presence of another individual whom we want to impress. 
 
 We instantiate the predictions of our model in a simple causal learning task and measure people’s decisions about whether to take actions that support learning vs. social goals. We show that emphasizing performance or self-presentation goals leads to actions that are not informative and thus reduce the chances of learning (E1). Next, we show that the presence of an observer (i.e., a boss) pushes learners to pursue performance/presentation actions even when the learning goal is highlighted (E2). Finally, we present a Bayesian Data Analysis showing that the empirical results are consistent with predictions of our cognitive model of social-active learning.
 
 # Computational model
 
-To examine the learning-performance tradeoff, 
-we situated our model and paradigm in a simple learning environment.
-The learner in our model has a toy that he can act on,
-and can choose between two kinds of actions
-that will each lead to one outcome (new discovery) or the other (immediate reward).
-The learner's action rests on his goals to explore versus exploit, 
-which in turn are determined in part by the presence or absence of another person he cares about (i.e. his boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}
-
-A key assumption underlying inferences in recent Bayesian models of human social cognition is that 
+[FIXME: move this para up in intro, near shafto] A key assumption underlying inferences in recent Bayesian models of human social cognition is that 
 people act approximately optimally given a utility function [e.g. @goodman2016; @jara2016]. 
 Our model adopts the same utility-theoretic approach, and assumes an approximately optimal agent 
 who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017]. 
-Our model thus reflects a principled tradeoff between
+Our model thus reflects a tradeoff between
 different goals that a learner has in a social learning context.
-Specifically, we model how a person may make a decision to act based on 
+
+We situated our model and paradigm in a simple learning environment.
+The learner in our model has a toy that he can act on (Figure FIXME),
+and can choose between two kinds of actions
+that will each lead to one outcome (new discovery) or the other (immediate reward).
+The learner's action rests on relative utilities he assigns to exploration versus exploitation, 
+which in turn are determined in part by the presence or absence of another person he cares about (i.e. his boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}
+[FIXME: move up to this part up]
+
+We model how a person may make a decision to act based on 
 his desire to learn how a toy works (*learning utility*), 
 to make the toy operate and perform a given function (*performance utility*), 
 or to present himself as a competent individual who knows how to make the toy work (*presentational utility*; see the model diagram in Figure 1).
 
 ### Learning utility
 
-The *learning utility* symbolizes the goal to learn new information, which in our paradigm specifically is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956], which quantifies the *expected utility* of different information seeking actions. Here we follow the mathematical details of the OED approach as outlined in @coenen2017. The set of queries, each realized through taking an action, is defined as $Q_1, Q_2, ..., Q_n = {Q}$. The expected utility of each query ($EU(Q)$) is a function of two factors: (1) the probability of obtaining a specific answer $P(a)$ weighted by (2) the usefulness of that answer for achieving the learning goal $U(a)$.
+The *learning utility* symbolizes the goal to learn new information, which in our paradigm specifically is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956], which quantifies the *expected utility* of different information seeking actions. Here we follow the mathematical details of the OED approach as outlined in @coenen2017. The learner considers the hypothesis space $H$, and wants to determine the correct hypothesis. The set of queries, each realized through taking an action, is defined as $Q_1, Q_2, ..., Q_n = {Q}$. The expected utility of each query ($EU(Q)$) is a function of two factors: (1) the probability of obtaining a specific answer $P(a)$ weighted by (2) the usefulness of that answer for achieving the learning goal $U(a)$.
 
 $$EU(Q) = \sum_{a\in q}{P(a)U(a)}$$
 
@@ -100,7 +101,7 @@ There are a variety of ways to define the utility of each answer [for a detailed
 
 $$ U_{learn} = U(a) = \frac{ent(H) - ent(H|a)}{log_2n}$$
 \noindent
-where $ent(H)$ is defined using Shannon entropy\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}. We measure the overall amount of uncertainty in the learner's beliefs about the candidate hypotheses as defined by @mackay2003: 
+where $ent(H)$ is the Shannon entropy of $H$.\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.} We measure the overall amount of uncertainty in the learner's beliefs about the candidate hypotheses as defined by @mackay2003: 
 
 $$ent(H) = -\sum_{a\in A}{P(h)log_2P(h)}$$
 \noindent
@@ -509,7 +510,7 @@ The predictions of the action choices according to the fitted learner model are 
 # General Discussion
 
 How does the social context shape our decision making in an active learning environment? 
-We proposed that people make decisions based on a principled tradeoff between learning- and performance-oriented goals, 
+We proposed that people make decisions based on a tradeoff between learning- and performance-oriented goals, 
 and that the social context influences the desire to present oneself as competent and knowledgeable, and may encourage pursuit of immediate effect outcome. 
 In two experiments, we confirmed that people's behaviors were in line with our hypothesis, 
 as they chose more informative actions when learning goals were highlighted with no boss present, while they chose more immediately rewarding actions when performance or presentational goals were highlighted, especially when the boss was present on scene. 
