--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -86,10 +86,10 @@ self-presentation; goal tradeoffs
 Imagine that you are a novice cook and you have to decide what meal to
 prepare for a first date. Should you choose an easy favorite or should
 you attempt to make something new? While the familiar recipe has a high
-chance of ensuring a good meal, you are less likely to discover a new,
-delicious dish. The new recipe might taste even better, but it has a
-higher chance of failure. But perhaps this decision would change if you
-were cooking for a friend or teacher who could help or give feedback.
+chance of ensuring a good meal, you might miss out on a new, delicious
+dish. The new recipe might taste even better, but it has a higher chance
+of failure. But perhaps this decision would change if you were cooking
+for a friend or teacher who could help or give feedback.
 
 We often have to choose between \emph{exploration} and
 \emph{exploitation}: that is, actions that could (a) lead to an overt,
@@ -156,13 +156,14 @@ richer inferences and richer utility structures where people must
 integrate the value of social goals -- looking competent or
 knowledgeable, for example -- and information goals when deciding what
 to do next. Moreover, actions that maximize learning are inherently
-risky, and thus may be more difficult to undertake in with someone else
-present. How can active learning models be modified to accommodate this
-richer set of utilities? As a step towards answering this question, we
-model a learner who considers a mixture of learning and performance
-goals. We assume that these goals result from features of the social
-context such as the presence of another individual whom we want to
-impress.
+risky in that you can potentially fail to produce an apparent outcome,
+and thus may be more difficult to undertake in with someone else present
+who might judge you as incompetent. How can active learning models be
+modified to accommodate this richer set of utilities? As a step towards
+answering this question, we model a learner who considers a mixture of
+learning and performance goals. We assume that these goals result from
+features of the social context such as the presence of another
+individual whom we want to impress.
 
 We instantiate the predictions of our model in a simple causal learning
 task and measure people's decisions about whether to take actions that
@@ -177,28 +178,30 @@ cognitive model of social-active learning.
 
 \section{Computational model}\label{computational-model}
 
-To examine the learning-performance tradeoff, we situated our model and
-paradigm in a simple learning environment. The learner in our model has
-a toy that he can act on, and can choose between two kinds of actions
-that will each lead to one outcome (new discovery) or the other
-(immediate reward). The learner's action rests on his goals to explore
-versus exploit, which in turn are determined in part by the presence or
+{[}FIXME: move this para up in intro, near shafto{]} A key assumption
+underlying inferences in recent Bayesian models of human social
+cognition is that people act approximately optimally given a utility
+function (e.g. Goodman \& Frank, 2016; Jara-Ettinger, Gweon, Schulz, \&
+Tenenbaum, 2016). Our model adopts the same utility-theoretic approach,
+and assumes an approximately optimal agent who reasons about the utility
+function that represents a weighted combination of multiple goals (Yoon,
+Tessler, Goodman, \& Frank, 2017). Our model thus reflects a tradeoff
+between different goals that a learner has in a social learning context.
+
+We situated our model and paradigm in a simple learning environment. The
+learner in our model has a toy that he can act on (Figure FIXME), and
+can choose between two kinds of actions that will each lead to one
+outcome (new discovery) or the other (immediate reward). The learner's
+action rests on relative utilities he assigns to exploration versus
+exploitation, which in turn are determined in part by the presence or
 absence of another person he cares about (i.e.~his
 boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}
+{[}FIXME: move up to this part up{]}
 
-A key assumption underlying inferences in recent Bayesian models of
-human social cognition is that people act approximately optimally given
-a utility function (e.g. Goodman \& Frank, 2016; Jara-Ettinger, Gweon,
-Schulz, \& Tenenbaum, 2016). Our model adopts the same utility-theoretic
-approach, and assumes an approximately optimal agent who reasons about
-the utility function that represents a weighted combination of multiple
-goals (Yoon, Tessler, Goodman, \& Frank, 2017). Our model thus reflects
-a principled tradeoff between different goals that a learner has in a
-social learning context. Specifically, we model how a person may make a
-decision to act based on his desire to learn how a toy works
-(\emph{learning utility}), to make the toy operate and perform a given
-function (\emph{performance utility}), or to present himself as a
-competent individual who knows how to make the toy work
+We model how a person may make a decision to act based on his desire to
+learn how a toy works (\emph{learning utility}), to make the toy operate
+and perform a given function (\emph{performance utility}), or to present
+himself as a competent individual who knows how to make the toy work
 (\emph{presentational utility}; see the model diagram in Figure 1).
 
 \subsubsection{Learning utility}\label{learning-utility}
@@ -210,11 +213,13 @@ represented by an OED model (Lindley, 1956; ``Optimal Experiment
 Design''; Nelson, 2005), which quantifies the \emph{expected utility} of
 different information seeking actions. Here we follow the mathematical
 details of the OED approach as outlined in Coenen, Nelson, \& Gureckis
-(2017). The set of queries, each realized through taking an action, is
-defined as \(Q_1, Q_2, ..., Q_n = {Q}\). The expected utility of each
-query (\(EU(Q)\)) is a function of two factors: (1) the probability of
-obtaining a specific answer \(P(a)\) weighted by (2) the usefulness of
-that answer for achieving the learning goal \(U(a)\).
+(2017). The learner considers the hypothesis space \(H\), and wants to
+determine the correct hypothesis. The set of queries, each realized
+through taking an action, is defined as \(Q_1, Q_2, ..., Q_n = {Q}\).
+The expected utility of each query (\(EU(Q)\)) is a function of two
+factors: (1) the probability of obtaining a specific answer \(P(a)\)
+weighted by (2) the usefulness of that answer for achieving the learning
+goal \(U(a)\).
 
 \[EU(Q) = \sum_{a\in q}{P(a)U(a)}\]
 
@@ -227,8 +232,8 @@ usefulness of the answer to the query, and thus is equal to the learning
 utility (\(U_{learn}\)):
 
 \[ U_{learn} = U(a) = \frac{ent(H) - ent(H|a)}{log_2n}\] \noindent
-where \(ent(H)\) is defined using Shannon
-entropy\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}.
+where \(ent(H)\) is the Shannon entropy of
+\(H\).\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}
 We measure the overall amount of uncertainty in the learner's beliefs
 about the candidate hypotheses as defined by MacKay (2003):
 
@@ -595,17 +600,17 @@ high accuracy \(r^2(21)\) = 0.9.
 
 How does the social context shape our decision making in an active
 learning environment? We proposed that people make decisions based on a
-principled tradeoff between learning- and performance-oriented goals,
-and that the social context influences the desire to present oneself as
-competent and knowledgeable, and may encourage pursuit of immediate
-effect outcome. In two experiments, we confirmed that people's behaviors
-were in line with our hypothesis, as they chose more informative actions
-when learning goals were highlighted with no boss present, while they
-chose more immediately rewarding actions when performance or
-presentational goals were highlighted, especially when the boss was
-present on scene. When no goal was specified, people showed behavior
-that seemed to reflect a mix of the goals in tradeoff. Our computational
-model successfully captured key patterns in these behavioral data.
+tradeoff between learning- and performance-oriented goals, and that the
+social context influences the desire to present oneself as competent and
+knowledgeable, and may encourage pursuit of immediate effect outcome. In
+two experiments, we confirmed that people's behaviors were in line with
+our hypothesis, as they chose more informative actions when learning
+goals were highlighted with no boss present, while they chose more
+immediately rewarding actions when performance or presentational goals
+were highlighted, especially when the boss was present on scene. When no
+goal was specified, people showed behavior that seemed to reflect a mix
+of the goals in tradeoff. Our computational model successfully captured
+key patterns in these behavioral data.
 
 Our model has implications for many interesting future directions. For
 example, how might attitudes toward learning and social goals change at
