a bunch of changes throughout

--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -15,6 +15,17 @@
   publisher={Elsevier}
 }
 
+@article{xu2007,
+  title={Word learning as Bayesian inference.},
+  author={Xu, Fei and Tenenbaum, Joshua B},
+  journal={Psychological review},
+  volume={114},
+  number={2},
+  pages={245},
+  year={2007},
+  publisher={American Psychological Association}
+}
+
 @article{markant2014,
   title={Is it better to select or to receive? Learning via active and passive hypothesis testing.},
   author={Markant, Douglas B and Gureckis, Todd M},
