changes to fig and others, at 6.4 pg

--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -15,6 +15,17 @@
   publisher={Elsevier}
 }
 
+@article{carpenter1998fourteen,
+  title={Fourteen-through 18-month-old infants differentially imitate intentional and accidental actions},
+  author={Carpenter, Malinda and Akhtar, Nameera and Tomasello, Michael},
+  journal={Infant behavior and development},
+  volume={21},
+  number={2},
+  pages={315--330},
+  year={1998},
+  publisher={Elsevier}
+}
+
 @article{xu2007,
   title={Word learning as Bayesian inference.},
   author={Xu, Fei and Tenenbaum, Joshua B},
